--- a/index.html
+++ b/index.html
@@ -60,51 +60,105 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.contact-info {
+    background-color: #f4f4f4;
+    padding: 10px;
+    text-align: center;
+}
 </style>
 <body>
     <nav>
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
+    <div class="contact-info">
+        <h1>Faizan Khan</h1>
+        <p>Cardiff, United Kingdom | Mob: 07721896186 | Email: faizankhan479@gmail.com</p>
+        <p><a href="https://github.com/faizankhan479">GitHub</a> | <a href="https://www.linkedin.com/in/faizan-khan-93378ba8/">LinkedIn</a></p>
+    </div>
+
     <section id="about">
-        <h1>About Me</h1>
+        <h2>About Me</h2>
         <p>As an experienced Web Developer and certified AWS Solutions Architect, I bring a comprehensive blend of hands-on technical skills and strategic insight into cloud technologies and digital transformation. I excel in fast-paced environments, leveraging agile methodologies and a proactive approach to address complex challenges in the UK's public and private sectors. Eager to apply strategic thinking and technical expertise to resolve complex problems.</p>
     </section>
 
     <section id="education">
-        <h1>Education</h1>
+        <h2>Education</h2>
         <p><strong>Cardiff Metropolitan University</strong> (January 2020 – April 2022) - Master of Advanced Computer Science (First Class (1st))</p>
         <p><strong>Deccan College of Engineering and Technology</strong> (April 2011 – May 2015) - Bachelor of Engineering in Information Technology</p>
     </section>
 
-    <section id="projects">
-        <h1>Projects and Experience</h1>
-        <div class="project">
-            <h2>Web Developer, Yard Associates Ltd</h2>
-            <p>Led tag management and analytics implementations, designed and executed A/B tests using CSS, significantly improving user engagement and conversion rates for key web pages. (November 2022 – Present)</p>
+    <section id="experience">
+        <h2>Professional Experience</h2>
+        <div>
+            <h3>Web Developer, Yard Associates Ltd</h3>
+            <p>(November 2022 – Present)</p>
+            <ul>
+                <li>Led tag management and analytics implementations, contributing to improved decision-making processes through enhanced data insights for various UK Clients.</li>
+                <li>Designed and executed A/B tests using CSS, significantly improving user engagement and conversion rates for key web pages.</li>
+            </ul>
         </div>
-        <div class="project">
-            <h2>Full-stack Developer, Opti-twin Ltd</h2>
-            <p>Worked with the Lead Developer to test and add features using Typescript in the backend, maintaining backend repository and implementing domain-driven design principles for the Opti-Twin Dashboard. (June 2022 – November 2022)</p>
+        <div>
+            <h3>Full-stack Developer, Opti-twin Ltd</h3>
+            <p>(June 2022 – November 2022)</p>
+            <ul>
+                <li>Worked with the Lead Developer to test and add features using Typescript in the backend which is a custom back-end kernel built along domain-driven design principles for the Opti-Twin Dashboard.</li>
+                <li>Solely responsible for maintaining the backend repository and ensuring the Domain Driven Designs Principles stay in place during the deployment of various features to the Opti-Twin backend.</li>
+                <li>Added various features of Reporting, alerting mechanisms using various libraries of nodes.</li>
+                <li>Catchup with the team on the deliverables of the week and proofreading the code for various pull requests for the back-end repository.</li>
+                <li>Enhanced backend solutions using IaaS principles, including load balancing and automatic scaling, to support high availability and disaster recovery scenarios.</li>
+                <li>Managed AWS environments for deploying and scaling applications, improving system resilience and performance.</li>
+            </ul>
         </div>
-        <div class="project">
-            <h2>Software Developer, VisScore Ltd</h2>
-            <p>Enhanced the functionality and efficiency of a marketing attribution platform, applying cloud principles to optimize data processing and analytics. (January 2022 – May 2022)</p>
+        <div>
+            <h3>Software Developer, VisScore Ltd</h3>
+            <p>(January 2022 – May 2022)</p>
+            <ul>
+                <li>Enhanced the functionality and efficiency of a marketing attribution platform cubed, applying cloud principles to optimize data processing and analytics.</li>
+            </ul>
         </div>
-        <div class="project">
-            <h2>Full Stack Developer, HR in One Ltd</h2>
-            <p>Developed and automated HR systems using complex backend processes with PHP and implemented MVC approach for security and reduced complexity. (March 2021 – January 2022)</p>
+        <div>
+            <h3>Full Stack Developer, HR in One Ltd</h3>
+            <p>(March 2021 – January 2022)</p>
+            <ul>
+                <li>Worked as a Full Stack Developer where I contributed to the development and automation of HR systems which inherited complex back-end processes using PHP.</li>
+                <li>Strategically implemented MVC approach for efficient reusability of classes, maintaining security and reducing complexity.</li>
+                <li>Successfully executed Data Privacy by Design/Default in the entire application.</li>
+                <li>Designed and integrated outstanding validating features that used to prevent corrupted data into databases.</li>
+                <li>Coordinated and assisted with high-level management in delivering and training the application to the interested stakeholders.</li>
+                <li>Developed secure and scalable backend solutions, implementing best practices in cloud architecture and data privacy.</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Software Developer, Johnson & Johnson</h3>
+            <p>(May 2018 – November 2019)</p>
+            <ul>
+                <li>Developed a Security Automation Tool which is a reporting tool for Johnson & Johnson. It was used to automate the J&J SAP Security Audit process by 80%.</li>
+                <li>Worked with Agile Methodologies like Test Driven Development (TDD) and Scrum Methodology.</li>
+                <li>Developed UI Screens in Neptune Planet 9 Development tool using SAP UI5, JavaScript, jQuery, JSON, Rest APIs, and AJAX.</li>
+                <li>Created Widgets and maintained their database.</li>
+                <li>Created and used the RESTful APIs, to generate reports by extracting data from the widgets created.</li>
+                <li>Applied Validations for different Controls such that only authenticated and Valid Data is Inserted JNJ Database.</li>
+            </ul>
+        </div>
+        <div>
+            <h3>ERP Implementation Consultant, Focus Softnet Pvt ltd</h3>
+            <p>(September 2017- April 2018)</p>
+            <ul>
+                <li>Integrated the manufacturing, sales, and inventory data of various clients in an ERP-based Software Focus 8 Cloud Software for an efficient accounting and reporting solution for the company.</li>
+            </ul>
         </div>
     </section>
 
     <section id="skills">
-        <h1>Technical Skills & Certifications</h1>
+        <h2>Technical Skills & Certifications</h2>
         <p><strong>Cloud Platforms:</strong> AWS (Certified Solutions Architect), Azure, Implementing HA and DR strategies, IaaS, PaaS, SaaS</p>
         <p><strong>Containerization and Orchestration:</strong> Docker, Kubernetes</p>
         <p><strong>Programming Languages:</strong> Python, JavaScript, PHP, TypeScript</p>
@@ -116,7 +170,7 @@ button:hover {
     </section>
 
     <section id="contact">
-        <h1>Contact Me</h1>
+        <h2>Contact Me</h2>
         <form>
             <input type="text" placeholder="Your Name" required>
             <input type="email" placeholder="Your Email" required>
