--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faizan Khan's Portfolio</title>
+    <title>Tamkanath Fatima's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <style>
@@ -79,56 +79,27 @@ section {
     </nav>
 
     <div class="contact-info">
-        <h1>Faizan Khan</h1>
-        <p>Cardiff, United Kingdom | Mob: 07721896186 | Email: faizankhan479@gmail.com</p>
-        <p><a href="https://github.com/faizankhan479">GitHub</a> | <a href="https://www.linkedin.com/in/faizan-khan-93378ba8/">LinkedIn</a></p>
+        <h1>Tamkanath Fatima</h1>
+        <p>United Kingdom | Mob: 07442395705 | Email: tfatima722@gmail.com</p>
+        <p><a href="https://www.linkedin.com/in/tamkanath-fatima/">LinkedIn</a></p>
     </div>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>As an experienced Web Developer and certified AWS Solutions Architect, I bring a comprehensive blend of hands-on technical skills and strategic insight into cloud technologies and digital transformation. I excel in fast-paced environments, leveraging agile methodologies and a proactive approach to address complex challenges in the UK's public and private sectors. Eager to apply strategic thinking and technical expertise to resolve complex problems.</p>
+        <p>As an experienced Web Developer, I bring a comprehensive blend of hands-on technical skills to web development and bootstrapping technologies. I excel in fast-paced environments, leveraging agile methodologies and a proactive approach to address complex challenges in both the UK's public and private sectors. Eager to apply strategic thinking and technical expertise to solve complex problems.</p>
     </section>
 
     <section id="education">
         <h2>Education</h2>
-        <p><strong>Cardiff Metropolitan University</strong> (January 2020 – April 2022) - Master of Advanced Computer Science (First Class (1st))</p>
-        <p><strong>Deccan College of Engineering and Technology</strong> (April 2011 – May 2015) - Bachelor of Engineering in Information Technology</p>
+        <p><strong>Jawaharlal Nehru Technological University</strong> (April 2016 – Sept 2020) - Bachelor of Engineering in Information Technology</p>
         <div class="top-link"><a href="#top">Back to Top</a></div>
     </section>
 
     <section id="experience">
         <h2>Professional Experience</h2>
         <div>
-            <h3>Web Developer, Yard Associates Ltd</h3>
-            <p>(November 2022 – Present)</p>
-            <ul>
-                <li>Led tag management and analytics implementations, contributing to improved decision-making processes through enhanced data insights for various UK Clients.</li>
-                <li>Designed and executed A/B tests using CSS, significantly improving user engagement and conversion rates for key web pages.</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Full-stack Developer, Opti-twin Ltd</h3>
-            <p>(June 2022 – November 2022)</p>
-            <ul>
-                <li>Worked with the Lead Developer to test and add features using Typescript in the backend which is a custom back-end kernel built along domain-driven design principles for the Opti-Twin Dashboard.</li>
-                <li>Solely responsible for maintaining the backend repository and ensuring the Domain Driven Designs Principles stay in place during the deployment of various features to the Opti-Twin backend.</li>
-                <li>Added various features of Reporting, alerting mechanisms using various libraries of nodes.</li>
-                <li>Catchup with the team on the deliverables of the week and proofreading the code for various pull requests for the back-end repository.</li>
-                <li>Enhanced backend solutions using IaaS principles, including load balancing and automatic scaling, to support high availability and disaster recovery scenarios.</li>
-                <li>Managed AWS environments for deploying and scaling applications, improving system resilience and performance.</li>
-            </ul>
-        </div>
-        <div class="top-link"><a href="#top">Back to Top</a></div>
-        <div>
-            <h3>Software Developer, VisScore Ltd</h3>
-            <p>(January 2022 – May 2022)</p>
-            <ul>
-                <li>Enhanced the functionality and efficiency of a marketing attribution platform cubed, applying cloud principles to optimize data processing and analytics.</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Full Stack Developer, HR in One Ltd</h3>
-            <p>(March 2021 – January 2022)</p>
+            <h3>Full Stack Developer, Datalineage Consulting Ltd (UK)</h3>
+            <p>(March 2022 – Present)</p>
             <ul>
                 <li>Worked as a Full Stack Developer where I contributed to the development and automation of HR systems which inherited complex back-end processes using PHP.</li>
                 <li>Strategically implemented MVC approach for efficient reusability of classes, maintaining security and reducing complexity.</li>
@@ -139,42 +110,36 @@ section {
             </ul>
         </div>
         <div>
-            <h3>Software Developer, Johnson & Johnson</h3>
-            <p>(May 2018 – November 2019)</p>
+            <h3>Software Developer, Focus Softnet Pvt ltd (India)</h3>
+            <p>(May 2019 – January 2022)</p>
             <ul>
-                <li>Developed a Security Automation Tool which is a reporting tool for Johnson & Johnson. It was used to automate the J&J SAP Security Audit process by 80%.</li>
-                <li>Worked with Agile Methodologies like Test Driven Development (TDD) and Scrum Methodology.</li>
-                <li>Developed UI Screens in Neptune Planet 9 Development tool using SAP UI5, JavaScript, jQuery, JSON, Rest APIs, and AJAX.</li>
-                <li>Created Widgets and maintained their database.</li>
-                <li>Created and used the RESTful APIs, to generate reports by extracting data from the widgets created.</li>
-                <li>Applied Validations for different Controls such that only authenticated and Valid Data is Inserted JNJ Database.</li>
-            </ul>
-        </div>
-        <div>
-            <h3>ERP Implementation Consultant, Focus Softnet Pvt ltd</h3>
-            <p>(September 2017- April 2018)</p>
-            <ul>
-                <li>Integrated the manufacturing, sales, and inventory data of various clients in an ERP-based Software Focus 8 Cloud Software for an efficient accounting and reporting solution for the company.</li>
+                <li>Actively maintained and developed features for Focus 8 ERP Software, utilizing PHP and the Zend Framework to enhance this legacy ERP product.</li>
+                <li>Integrated the LAMP stack technologies to optimize and extend backend functionalities, ensuring robust system performance and scalability.</li>
+                <li>Employed Agile Methodologies, including Test Driven Development (TDD) and Scrum, to manage development cycles and ensure high-quality outputs.</li>
+                <li>Created and managed widgets within the Launchpad for Focus 8, incorporating jQuery and Bootstrap for front-end interactions to enhance user experience.</li>
+                <li>Developed and maintained RESTful APIs using PHP, facilitating data extraction and report generation from system widgets, improving data accessibility and reporting capabilities.</li>
+                <li>Contributed to transitioning front-end parts from jQuery to React, participating in the architectural discussions and implementation strategies to modernize the user interface.</li>
+                <li>Worked collaboratively with cross-functional teams to design and implement complex system features, demonstrating open-mindedness and flexibility in adopting new technologies and methodologies.</li>
+                <li>Maintained high standards in database management and optimizations, leveraging my knowledge of MySQL to ensure efficient data handling and storage.</li>
             </ul>
         </div>
         <div class="top-link"><a href="#top">Back to Top</a></div>
     </section>
 
     <section id="skills">
-        <h2>Technical Skills & Certifications</h2>
-        <p><strong>Cloud Platforms:</strong> AWS (Certified Solutions Architect), Azure, Implementing HA and DR strategies, IaaS, PaaS, SaaS</p>
-        <p><strong>Containerization and Orchestration:</strong> Docker, Kubernetes</p>
-        <p><strong>Programming Languages:</strong> Python, JavaScript, PHP, TypeScript</p>
-        <p><strong>Frameworks/Tools:</strong> React.js, Django, Adobe Analytics, Google Tag Manager</p>
+        <h2>Technical Skills</h2>
+        <p><strong>Cloud Platforms:</strong> AWS Amplify (for deployment)</p>
+        <p><strong>Containerization and Orchestration:</strong> Vagrant</p>
+        <p><strong>Programming Languages:</strong> JavaScript, PHP 8.2</p>
+        <p><strong>Frameworks/Tools:</strong> Laminas (formerly Zend Framework), GraphQL, Django</p>
         <p><strong>Databases:</strong> MySQL</p>
-        <p><strong>DevOps Tools:</strong> Git, GitHub, Bitbucket</p>
-        <p><strong>Analytics:</strong> Google Analytics, Adobe Launch, Tealium</p>
-        <p><strong>Licenses & Certifications:</strong> AWS Certified Solutions Architect (Issued on February 12, 2024 Expires on February 12, 2027), Google Analytics Certification (Expiry: December 26, 2024)</p>
+        <p><strong>DevOps Tools:</strong> GitHub, Bitbucket</p>
+        <p><strong>Licenses & Certifications:</strong> Google Analytics Certification (Expiry: December 26, 2024)</p>
         <div class="top-link"><a href="#top">Back to Top</a></div>
     </section>
 
     <div id="footer">
-        <p>Powered by Amazon Amplify</p>
+        <p>© 2024 Tamkanath Fatima. All rights reserved.</p>
     </div>
 
     <script>
