--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ nav ul li a {
     font-size: 1.2em;
 }
 
-.top-link a{
-    color:blueviolet;
+.top-link a {
+    color: blueviolet;
     text-decoration: none;
     font-size: 0.99em;
 }
@@ -80,47 +80,45 @@ section {
 
     <div class="contact-info">
         <h1>Tamkanath Fatima</h1>
-        <p>United Kingdom | Mob: 07442395705 | Email: tfatima722@gmail.com</p>
+        <p>Cardiff, UK | Mob: +44 7442395705 | Email: tamfat722@gmail.com</p>
         <p><a href="https://www.linkedin.com/in/tamkanath-fatima/">LinkedIn</a></p>
     </div>
 
     <section id="about">
         <h2>About Me</h2>
-        <p>As an experienced Web Developer, I bring a comprehensive blend of hands-on technical skills to web development and bootstrapping technologies. I excel in fast-paced environments, leveraging agile methodologies and a proactive approach to address complex challenges in both the UK's public and private sectors. Eager to apply strategic thinking and technical expertise to solve complex problems.</p>
+        <p>Pursued Bachelor in Computer Science. I have worked as a Web Developer with various international clients. I am actively seeking Web Developer roles in order to leverage my Web Development and IT skills. I have the right to work in UK and can relocate.</p>
     </section>
 
     <section id="education">
         <h2>Education</h2>
-        <p><strong>Jawaharlal Nehru Technological University</strong> (April 2016 – Sept 2020) - Bachelor of Engineering in Information Technology</p>
+        <p><strong>Jawaharlal Nehru Technological University</strong> (2016 – 2020) - Bachelor of Engineering in Computer Science</p>
+        <p>Major Project: Developed Lost and Found Prototype using HTML, CSS, JavaScript with backend technologies PHP and MySQL</p>
         <div class="top-link"><a href="#top">Back to Top</a></div>
     </section>
 
     <section id="experience">
         <h2>Professional Experience</h2>
         <div>
-            <h3>Full Stack Developer, Datalineage Consulting Ltd (UK)</h3>
-            <p>(March 2022 – Present)</p>
+            <h3>Web Developer, Advent Global Solutions</h3>
+            <p>(January 2023 – February 2024 | Remote)</p>
             <ul>
-                <li>Worked as a Full Stack Developer where I contributed to the development and automation of HR systems which inherited complex back-end processes using PHP.</li>
-                <li>Strategically implemented MVC approach for efficient reusability of classes, maintaining security and reducing complexity.</li>
-                <li>Successfully executed Data Privacy by Design/Default in the entire application.</li>
-                <li>Designed and integrated outstanding validating features that used to prevent corrupted data into databases.</li>
-                <li>Coordinated and assisted with high-level management in delivering and training the application to the interested stakeholders.</li>
-                <li>Developed secure and scalable backend solutions, implementing best practices in cloud architecture and data privacy.</li>
+                <li>Created, tested, and deployed visually appealing and responsive web pages for clients using HTML and CSS with designs that resonate with the client's branding.</li>
+                <li>Tested the webpages using Windows Developer Tools for different devices and sizes. Inspected the webpage and tested new designs within the browser before implementing the changes.</li>
+                <li>Resolved various CSS issues with different clients by inspecting the pages and debugging in the browser (DOM Manipulation).</li>
+                <li>Applied quick Bootstrap components for quick layout and responsive designs for clients.</li>
+                <li>Optimized the PDP pages with better Grid views and appealing layouts based on designs provided which resulted in better conversion rates on the websites.</li>
+                <li>Created custom styles and enhanced the page’s visual appeal using Tailwind CSS.</li>
+                <li>Used Adobe Target to create personalized experiences and conduct multivariate testing to identify the most effective design elements. Delivered the landing page on time, leading to a 25% increase in product sign-ups within the first week of launch and a 20% improvement in user engagement due to personalized content.</li>
             </ul>
         </div>
         <div>
-            <h3>Software Developer, Focus Softnet Pvt ltd (India)</h3>
-            <p>(May 2019 – January 2022)</p>
+            <h3>Junior Web Developer, Advent Global Solutions</h3>
+            <p>(March 2021 - December 2022 | Hyderabad, India)</p>
             <ul>
-                <li>Actively maintained and developed features for Focus 8 ERP Software, utilizing PHP and the Zend Framework to enhance this legacy ERP product.</li>
-                <li>Integrated the LAMP stack technologies to optimize and extend backend functionalities, ensuring robust system performance and scalability.</li>
-                <li>Employed Agile Methodologies, including Test Driven Development (TDD) and Scrum, to manage development cycles and ensure high-quality outputs.</li>
-                <li>Created and managed widgets within the Launchpad for Focus 8, incorporating jQuery and Bootstrap for front-end interactions to enhance user experience.</li>
-                <li>Developed and maintained RESTful APIs using PHP, facilitating data extraction and report generation from system widgets, improving data accessibility and reporting capabilities.</li>
-                <li>Contributed to transitioning front-end parts from jQuery to React, participating in the architectural discussions and implementation strategies to modernize the user interface.</li>
-                <li>Worked collaboratively with cross-functional teams to design and implement complex system features, demonstrating open-mindedness and flexibility in adopting new technologies and methodologies.</li>
-                <li>Maintained high standards in database management and optimizations, leveraging my knowledge of MySQL to ensure efficient data handling and storage.</li>
+                <li>Assisted senior developers in designing and adding new design elements in the web pages for clients.</li>
+                <li>Played a key role in implementing the logic and designing the Recently Viewed Banner on Product Display Pages where the Recently Viewed Products banner would display items that were recently viewed by the user during interactions with the website.</li>
+                <li>Assisted senior developers in developing and testing WordPress websites and setting up plugins WooCommerce and configuring basic settings such as store location and payment methods. Set up payment gateways such as PayPal and Stripe along with offering shipping rates and free shipping for eligible products.</li>
+                <li>Added plugins like Trustpilot to monitor the reviews and build trust with potential customers which eventually increased the conversion rates.</li>
             </ul>
         </div>
         <div class="top-link"><a href="#top">Back to Top</a></div>
@@ -128,13 +126,11 @@ section {
 
     <section id="skills">
         <h2>Technical Skills</h2>
-        <p><strong>Cloud Platforms:</strong> AWS Amplify (for deployment)</p>
-        <p><strong>Containerization and Orchestration:</strong> Vagrant</p>
-        <p><strong>Programming Languages:</strong> JavaScript, PHP 8.2</p>
-        <p><strong>Frameworks/Tools:</strong> Laminas (formerly Zend Framework), GraphQL, Django</p>
-        <p><strong>Databases:</strong> MySQL</p>
-        <p><strong>DevOps Tools:</strong> GitHub, Bitbucket</p>
-        <p><strong>Licenses & Certifications:</strong> Google Analytics Certification (Expiry: December 26, 2024)</p>
+        <p><strong>Languages:</strong> HTML, CSS, JavaScript, PHP, Python</p>
+        <p><strong>Libraries:</strong> jQuery, React</p>
+        <p><strong>Reporting tools:</strong> Jira</p>
+        <p><strong>Soft Skills:</strong> Communication, Teamwork, Problem Solving, Working with deadlines, Logical Thinking</p>
+        <p><strong>Certifications:</strong> Google Analytics Certification (Expiry: December 26, 2024)</p>
         <div class="top-link"><a href="#top">Back to Top</a></div>
     </section>
 
